--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,14 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Weight Calculator</h1>
+<form action="prediction" method="post">
+        <label for="height">Enter your height:</label><br>
+        <input type="number" id="height" name="height"><br><br>
+        <input type="submit">
+</form>
+    
+    
 
 </body>
 </html>
